[package]
name = "minecraft_launcher_core"
version = "0.1.0"
edition = "2021"
authors = ["shasankp000 <shasankp.14@gmail.com>"]
description = "A Minecraft launcher library written in rust"
rust-version = "1.65"
readme = "README.md"
license = "BSD-2-Clause"
keywords = ["minecraft", "minecraft_downloader", "minecraft_launcher"]
categories = ["algorithms"]
homepage = "https://github.com/shasankp000/mc_launcher_core_rs"
documentation = "https://github.com/shasankp000/mc_launcher_core_rs#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
requests_rs = "0.1.5"
minecraft_downloader_core = "0.1.4"
colored = "2.0.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
jsonxf = "1.1.1"
sys-info = "0.9.1"
whoami = "1.2.3"
[dependencies.uuid]
version = "1.2.1"
features = [
"v4",                # Lets you generate random UUIDs
"fast-rng",          # Use a faster (but still sufficiently random) RNG
"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
